--- a/installer/LayoutFixerInstaller/Package.wxs
+++ b/installer/LayoutFixerInstaller/Package.wxs
@@ -5,8 +5,11 @@
     Manufacturer="LayoutFixer"
     Version="1.0.0"
     UpgradeCode="{9A4F4B8E-9D2E-4B15-9A58-FA3C4D3E9B11}"
+    Icon="LayoutFixer.ico"
     Compressed="yes"
     Scope="perUser">
+     
+    <Icon Id="LayoutFixerIcon" SourceFile="LayoutFixer.ico" />
 
     <MajorUpgrade DowngradeErrorMessage="A newer version of LayoutFixer is already installed." />
     <MediaTemplate />
@@ -57,6 +60,8 @@
       <Shortcut Id="StartMenuShortcut"
                 Name="LayoutFixer"
                 Target="[INSTALLFOLDER]LayoutFixer.exe"
+                Icon="LayoutFixerIcon"
+                IconIndex="0"
                 WorkingDirectory="INSTALLFOLDER" />
       <RemoveFolder Id="RemoveProgramMenuDir" Directory="ProgramMenuDir" On="uninstall" />
       <RegistryValue Root="HKCU" Key="Software\LayoutFixer" Name="Installed" Type="integer" Value="1" KeyPath="yes" />
