--- a/src/LayoutFixer/MainWindow.xaml
+++ b/src/LayoutFixer/MainWindow.xaml
@@ -1,7 +1,7 @@
 <Window x:Class="LayoutFixer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="LayoutFixer Settings" Height="260" Width="520"
+        Title="LayoutFixer Settings" Height="260" Width="520" Icon="/Assets/LayoutFixer.ico"
         WindowStartupLocation="CenterScreen">
   <Grid Margin="12">
     <Grid.RowDefinitions>
